# OpenWeatherMapAPI

./: CMakeLists.txt  get_weather.c  main.c
